--- a/config.yml
+++ b/config.yml
@@ -73,7 +73,7 @@ params:
 
   # home-info mode
   homeInfoParams:
-    Title: "Hi there \U0001F44B"
+    Title: "Hi，nice to meet you here \U0001F44B"
     Content: Welcome to my blog
 
   socialIcons:
