--- a/config.yml
+++ b/config.yml
@@ -128,7 +128,7 @@ params:
             😃Un gusto conocerte aquí. Comparto mis pensamientos y algunos tipos de cosas al azar aquí.
 
 
-            😃很高兴与您在此相遇，我在此分享我的想法和一些随机的东西。
+            😃很高兴与您在此相遇。我在此分享我的想法和一些随机的东西。
 
     socialIcons:
         - name: github
