--- a/config.yml
+++ b/config.yml
@@ -4,6 +4,7 @@ paginate: 5
 theme: 
  - PaperMod
  - hugo-shortcode-gallery
+ - hugo-embed-pdf-shortcode
 
 enableInlineShortcodes: true
 enableRobotsTXT: true
@@ -125,10 +126,7 @@ params:
             😃Nice to meet you here. I share my thoughts and some random stuffs here. 
 
 
-            😃Un gusto conocerte aquí. Comparto mis pensamientos y algunos tipos de cosas al azar aquí.
-
-
-            😃很高兴与您在此相遇。我在此分享我的想法和一些随机的东西。
+            😃很高兴与您在此相遇，我在此分享我的想法和一些随机的东西。
 
     socialIcons:
         - name: github
